<resources>
    <string name="app_name">NutriScope</string>

    <string name="food_name">Food Name</string>
    <string name="fat">Fat</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="protein">Protein</string>
    <string name="kcalorie">Calorie</string>


    <string name="fiber">Fiber</string>
    <string name="sugars">Sugars</string>
    <string name="calcium">Calcium</string>
    <string name="iron">Iron</string>
    <string name="magnesium">Magnesium</string>
    <string name="phosphorus">Phosphorus</string>
    <string name="potassium">Potassium</string>
    <string name="sodium">Sodium</string>
    <string name="zinc">Zinc</string>
    <string name="selenium">Selenium</string>
    <string name="vitamin_a">Vitamin A</string>
    <string name="vitamin_d">Vitamin D</string>
    <string name="vitamin_c">Vitamin C</string>
    <string name="thiamin">Thiamin</string>
    <string name="riboflavin">Riboflavin</string>
    <string name="niacin">Niacin</string>
    <string name="vitamin_b6">Vitamin B6</string>
    <string name="vitamin_b12">Vitamin B12</string>
    <string name="vitamin_k">Vitamin K</string>
    <string name="folic_acid">Folic Acid</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="food_quantity">Quantity</string>

    <string name="search">Search</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>


    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="auth_failed">Sign in failed, please check your email and/or password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirmpassword">Comfirm Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_to_register">Don\'t have an account? Click here to sign up!</string>
    <string name="btn_link_to_login">Already registered? Login here. </string>

    <string name="facebook_app_id">1448817125162558</string>
    <string name="fb_login_protocol_scheme">fb1448817125162558</string>

    <string name="settings">Settings</string>

    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="new_pass">New Password</string>
    <string name="hint_new_email">New Email</string>
    <string name="title_activity_login_check">LoginCheckActivity</string>

    <string name="nickname">Nickname</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="height">Height (ft in)</string>
    <string name="weight">Weight (lbs)</string>
    <string name="activity_Level">Activity Level</string>
    <string name="calorie_goal">Calorie Goal</string>
    <string name="calc_calorie_goal">Calculate TDEE</string>
    <string name="sex">Sex</string>

</resources>
