<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/activity_profile_settings"
              android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:padding="0dp"
            app:layout_scrollFlags="scroll|enterAlways|snap" />
        </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dp">

            <LinearLayout
                android:id="@+id/nickname"
                style="@style/SettingItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/SettingHeaderText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nickname"/>

                <TextView
                    android:id="@+id/text_nickname"
                    style="@style/SettingContentText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Setting Content"/>
            </LinearLayout>

            <View
                style="@style/SettingDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>


            <LinearLayout
                android:id="@+id/age"
                style="@style/SettingItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/SettingHeaderText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/age"/>

                <TextView
                    android:id="@+id/text_age"
                    style="@style/SettingContentText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Setting Content"/>
            </LinearLayout>

            <View
                style="@style/SettingDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>


            <LinearLayout
                android:id="@+id/sex"
                style="@style/SettingItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/SettingHeaderText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sex"/>

                <TextView
                    android:id="@+id/text_sex"
                    style="@style/SettingContentText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Setting Content"/>
            </LinearLayout>

            <View
                style="@style/SettingDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>


            <LinearLayout
                android:id="@+id/height"
                style="@style/SettingItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/SettingHeaderText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/height"/>

                <TextView
                    android:id="@+id/text_height"
                    style="@style/SettingContentText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Setting Content"/>
            </LinearLayout>

            <View
                style="@style/SettingDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>


            <LinearLayout
                android:id="@+id/weight"
                style="@style/SettingItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/SettingHeaderText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"/>

                <TextView
                    android:id="@+id/text_weight"
                    style="@style/SettingContentText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Setting Content"/>
            </LinearLayout>

            <View
                style="@style/SettingDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>


            <LinearLayout
                android:id="@+id/activity_level"
                style="@style/SettingItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/SettingHeaderText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_Level"/>

                <TextView
                    android:id="@+id/text_activity_level"
                    style="@style/SettingContentText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Setting Content"/>
            </LinearLayout>

            <View
                style="@style/SettingDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>


            <LinearLayout
                android:id="@+id/calorie_goal"
                style="@style/SettingItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/SettingHeaderText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/calorie_goal"/>

                <TextView
                    android:id="@+id/text_calorie_goal"
                    style="@style/SettingContentText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Setting Content"/>
            </LinearLayout>

            <View
                style="@style/SettingDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>


            <Button
                android:id="@+id/calculate_tdee"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/calc_calorie_goal"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/change_email_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/change_email"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/change_password_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/change_password"
                android:textStyle="bold"/>


            <Button
                android:id="@+id/delete_account_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Delete Account"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/logout_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="Logout"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

        </LinearLayout>


    </ScrollView>


</LinearLayout>